Issue #3357880: Fix tour regression on z-index position for shepherd element after Admin Toolbar 3.3.2 had a change for the z-index for the admin toolbar

--- a/modules/varbase_tour/css/theme/tour.admin.theme.css
+++ b/modules/varbase_tour/css/theme/tour.admin.theme.css
@@ -59,8 +59,8 @@
   background-image: none;
 }
 .joyride-tip-guide .button:focus {
-  border-color: #68a3cf;
-  outline: #c1e0ff solid 2px;
+  border-color: rgb(104, 163, 207);
+  outline: rgb(193, 224, 255) solid 2px;
   box-shadow: none;
 }
 .joyride-tip-guide .button-action:before {
