--- a/modules/varbase_tour/css/theme/tour.default.theme.css
+++ b/modules/varbase_tour/css/theme/tour.default.theme.css
@@ -11,31 +11,26 @@
   left: auto;
 }
 .joyride-tip-guide .button {
-  position: relative;
+  position: relative; /* 1 */
   display: inline-block;
   box-sizing: border-box;
-  /* 3 */
-  padding: 0.25em 1.5em;
-  -webkit-appearance: none;
-  /* 3 */
-  -moz-appearance: none;
-  /* 2 */
+  padding: 0.25em 1.5em; /* 4 */
+  -webkit-appearance: none; /* 3 */
+  -moz-appearance: none; /* 3 */
   cursor: pointer;
   transition: all 0.1s;
-  /* 1 */
   text-align: center;
   text-decoration: none;
   color: #333;
-  /* 4 */
   border: 1px solid #a6a6a6;
   border-radius: 0;
   background-color: #f2f1eb;
-  text-shadow: 0 1px rgba(255, 255, 255, 0.6);
+  text-shadow: 0 1px hsla(0, 0%, 100%, 0.6);
   font-size: 0.875rem;
   font-weight: 600;
-  line-height: normal;
-  -webkit-font-smoothing: antialiased;
-  /* 6 */
+  line-height: normal; /* 2 */
+
+  -webkit-font-smoothing: antialiased; /* 6 */
 }
 .joyride-tip-guide .button:hover,
 .joyride-tip-guide .button:focus {
@@ -46,27 +41,28 @@
   background-image: linear-gradient(to bottom, #fcfcfa, #e9e9dd);
 }
 .joyride-tip-guide .button:hover {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.125);
+  box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.125);
 }
 .joyride-tip-guide .button:focus {
   z-index: 10;
   border: 1px solid #3ab2ff;
-  box-shadow: 0 0 0.5em 0.1em rgba(51, 177, 255, 0.7);
+  box-shadow: 0 0 0.5em 0.1em hsla(203, 100%, 60%, 0.7);
 }
 .joyride-tip-guide .button:active {
   transition: none;
   border: 1px solid #a6a6a6;
   background-color: #dfdfd9;
   background-image: linear-gradient(to bottom, #f6f6f3, #e7e7df);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 3px hsla(0, 0%, 0%, 0.2);
 }
 .joyride-tip-guide .button--primary {
   color: #fff;
   border-color: #1e5c90;
   background-color: #0071b8;
   background-image: linear-gradient(to bottom, #007bc6, #0071b8);
-  text-shadow: 0 1px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 1px hsla(0, 0%, 0%, 0.5);
   font-weight: 700;
+
   -webkit-font-smoothing: antialiased;
 }
 .joyride-tip-guide .button--primary:hover,
@@ -80,12 +76,12 @@
   border: 1px solid #1280df;
 }
 .joyride-tip-guide .button--primary:hover {
-  box-shadow: 0 1px 2px rgba(23, 26, 28, 0.25);
+  box-shadow: 0 1px 2px hsla(203, 10%, 10%, 0.25);
 }
 .joyride-tip-guide .button--primary:active {
   border-color: #144b78;
   background-image: linear-gradient(to bottom, #08639b, #0071b8);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 1px 3px hsla(0, 0%, 0%, 0.2);
 }
 .joyride-tip-guide h2,
 .joyride-tip-guide .heading-b {
@@ -105,7 +101,7 @@
 }
 
 .shepherd-element {
-  z-index: 999;
+  z-index: 100000;
 }
 .shepherd-element .button {
   display: inline-block;
@@ -123,6 +119,7 @@
   font-size: 1rem;
   font-weight: 700;
   line-height: 1rem;
+
   -webkit-font-smoothing: antialiased;
 }
 .shepherd-element .button:not(:focus) {
